fix(#23): fixe spacing mellom sprite og nummer

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -130,8 +130,14 @@
   flex-grow: 1;
   align-self: center;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: max(2px, 20%);
 }
+
+.ListSprite {
+
+}
+
 .listingInfoAsList {
   width: 60%;
   align-self: flex-start;
